--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
 
-  <h1>1.Klik </h1>
-  <h1>2.Klik!</h1>
+  <h1>1.Open! </h1>
+  <h1>2.Klik nog eens!</h1>
   <h1>3.Like!</h1>
 
   <div class="container">
