--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <h1>1.Open! </h1>
   <h1>2.Klik nog eens!</h1>
-  <h1>3.Like!</h1>
+  <h1>3. <button id="likeButton">Like</button> </h1>
+  
 
   <div class="container">
     <img class="present-img" src="ill/spring.gif" alt="Present">
@@ -21,7 +22,6 @@
     <source src="ill/toet.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
-  <button id="likeButton">Like</button>
 
 
   <script src="index.js"></script>
