--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 
   <div class="container">
-    <img class="present-img" src="ill/spring.gif" alt="Present">
+    <img class="present-img" src="ill/spring.gif" alt="https://i.pinimg.com/originals/fd/2c/1a/fd2c1a96b654e220d09525f006482477.gif">
   </div>
   
   <audio id="clickSound">
